--- a/work/index.html
+++ b/work/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+       
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Lin Kuanyin's portfolio</title>
+        <title>work - Lin Kuanyin's portfolio</title>
         <link rel="stylesheet" href="../css/master.css">
         <link rel="stylesheet" href="../css/work.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto:400,500,700" rel="stylesheet">
