--- a/work/chamcham.html
+++ b/work/chamcham.html
@@ -4,7 +4,7 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Lin Kuanyin's portfolio</title>
+        <title>chamcham - Lin Kuanyin's portfolio</title>
         <link rel="stylesheet" href="../css/master.css">
         <link rel="stylesheet" href="../css/chamcham.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway:800,700,400,600|Roboto:400,500,700" rel="stylesheet">
