--- a/work/tptea.html
+++ b/work/tptea.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Lin Kuanyin's portfolio</title>
+        <title>tptea - Lin Kuanyin's portfolio</title>
         <link rel="stylesheet" href="../css/master.css">
         <link rel="stylesheet" href="../css/tptea.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway:800,700,400,600|Roboto:400,500,700|Crimson+Text" rel="stylesheet">
