--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 </head>
 <body>
+    <div class="m_menu">
+        <div class="controlBox clearfix"><!--controlBox-->    
+            <div class="m_logo"><a href=""><img src="images/logo.png"></a></div>
+            <a class="main"><i class="fa fa-reorder"></i></a>
+        </div><!--controlBox end-->
+        <div class="hideBox"><!--hideBox-->        
+            <ul class="nav">
+                <li><a href="" class="current"><em>HOME</em>首頁</a></li>
+                <li><a href="about/index.html"><em>ABOUT</em>關於我</a></li>
+                <li><a href="work/index.html"><em>WORK</em>設計作品</a></li>    
+            </ul>    
+            <div class="downBox">
+                <span>
+                    <p>Lin Kuanyin's portfolio.</p>
+                    <p>I’m a Visual Designer.</p>
+                </span>
+                <a ><i class="phone fa fa-mobile" aria-hidden="true"></i>+886-912-587-766</a>
+                <a href="mailto:becky810210@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>becky810210@gmail.com</a>
+            </div>
+        </div><!--hideBox end-->
+    </div>
     <div class="outerwrap clearfix"><!--outerwrap-->
         <header class="b-box">
             <h1><a href=""></a></h1>
@@ -41,6 +62,7 @@
         </section>
     </div><!--outerwrap end-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="javascripts/jsmanage.js"></script>
     <script src="javascripts/scrollreveal.js"></script>
 <script>
 $(function(){
