--- a/work/caesar.html
+++ b/work/caesar.html
@@ -9,6 +9,27 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:800,700,400,600|Roboto:400,500,700" rel="stylesheet">
     </head>
     <body>
+        <div class="m_menu">
+            <div class="controlBox clearfix"><!--controlBox-->    
+                <div class="m_logo"><a href="../index.html"><img src="../images/logo.png"></a></div>
+                <a class="main"><i class="fa fa-reorder"></i></a>
+            </div><!--controlBox end-->
+            <div class="hideBox"><!--hideBox-->        
+                <ul class="nav">
+                    <li><a href="../index.html"><em>HOME</em>首頁</a></li>
+                    <li><a href="../about/index.html"><em>ABOUT</em>關於我</a></li>
+                    <li><a href="../work/index.html"><em>WORK</em>設計作品</a></li>    
+                </ul>    
+                <div class="downBox">
+                    <span>
+                        <p>Lin Kuanyin's portfolio.</p>
+                        <p>I’m a Visual Designer.</p>
+                    </span>
+                    <a ><i class="phone fa fa-mobile" aria-hidden="true"></i>+886-912-587-766</a>
+                    <a href="mailto:becky810210@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>becky810210@gmail.com</a>
+                </div>
+            </div><!--hideBox end-->
+        </div>
         <div class="outerwrap clearfix"><!--outerwrap-->
             <header class="b-box">
                 <h1><a href="../index.html"></a></h1>
@@ -33,11 +54,11 @@
                         <p class="title">Web Design</p>
                         <h2><strong>The Caesar Park<br/>Banqiao</strong></h2>
                         <div class="infoBox clearfix">
-                            <div class="g-tl-6 left">
+                            <div class="g-tv-6 left">
                                 <span>Info</span>
                                 <p>板橋凱撒大飯店為全新打造之新北市都會區唯一國際五星觀光飯店。以「新城市、新概念、新飯店」的理念結合在地文化精神，創造跨境之飯店場域，期盼帶給旅人休閒輕鬆的住宿體驗。預計在2017年底完工</p>
                             </div>
-                            <div class="g-tl-6 right">
+                            <div class="g-tv-6 right">
                                 <span>Date</span>
                                 <p>05/16</p>
                             </div>
@@ -60,12 +81,12 @@
                     <div class="wrap b-box clearfix">
                         <span class="num"><em><strong>DESIGN GOALS</strong></em><b>02</b></span>
                         <img src="../images/work/banqiao/computer.png" alt="">
-                        <div class="g-tl-6 left">
+                        <div class="g-tv-6 left">
                             <p class="title">Web Site</p>
                             <h3>The Caesar Park<br/>Banqiao</h3>
                             <p>板橋凱撒大飯店  /  2016  /  網站規劃設計</p>
                         </div>
-                        <div class="g-tl-6 right">
+                        <div class="g-tv-6 right">
                             <span>Description</span>
                             <p>於正式飯店建設完工前，架設臨時官網。探索人文歷史薈萃之旅，新時代地標，進行廣告行銷宣傳、訊息傳遞、公告佈達與訂房功能，鎖定板橋商圈洽商、休閒、觀光度假旅遊之客群。</p>
                             <a href="http://banqiao.caesarpark.com.tw/" target="_blank">http://banqiao.caesarpark.com.tw/</a>
@@ -85,6 +106,10 @@
                                 <li>
                                     <div class="color gary"></div>
                                     <p>#8c7d75</p>
+                                </li>
+                                 <li class="opacity">
+                                    <div class="color"></div>
+                                    <p></p>
                                 </li>
                                 <li>
                                     <div class="color red"></div>
