--- a/work/chamcham.html
+++ b/work/chamcham.html
@@ -10,6 +10,27 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:800,700,400,600|Roboto:400,500,700" rel="stylesheet">
     </head>
     <body>
+        <div class="m_menu">
+            <div class="controlBox clearfix"><!--controlBox-->    
+                <div class="m_logo"><a href="../index.html"><img src="../images/logo.png"></a></div>
+                <a class="main"><i class="fa fa-reorder"></i></a>
+            </div><!--controlBox end-->
+            <div class="hideBox"><!--hideBox-->        
+                <ul class="nav">
+                    <li><a href="../index.html"><em>HOME</em>首頁</a></li>
+                    <li><a href="../about/index.html"><em>ABOUT</em>關於我</a></li>
+                    <li><a href="../work/index.html"><em>WORK</em>設計作品</a></li>    
+                </ul>    
+                <div class="downBox">
+                    <span>
+                        <p>Lin Kuanyin's portfolio.</p>
+                        <p>I’m a Visual Designer.</p>
+                    </span>
+                    <a ><i class="phone fa fa-mobile" aria-hidden="true"></i>+886-912-587-766</a>
+                    <a href="mailto:becky810210@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>becky810210@gmail.com</a>
+                </div>
+            </div><!--hideBox end-->
+        </div>
         <div class="outerwrap clearfix"><!--outerwrap-->
             <header class="b-box">
                 <h1><a href="../index.html"></a></h1>
@@ -34,11 +55,11 @@
                         <p class="title">Web Design</p>
                         <h2><strong>HOTEL<br/>CHAM CHAM</strong></h2>
                         <div class="infoBox clearfix">
-                            <div class="g-tl-6 left">
+                            <div class="g-tv-6 left">
                                 <span>Info</span>
                                 <p>2016年．夏天．SUMMER最受年輕人期待的飯店品牌 ─「HOTEL CHAM CHAM趣淘漫旅」座落在全台最大的水庫「曾文水庫」風景區內，由凱撒飯店連鎖經營管理，打造一個專屬於年輕人的冒險體驗飯店。</p>
                             </div>
-                            <div class="g-tl-6 right">
+                            <div class="g-tv-6 right">
                                 <span>Date</span>
                                 <p>07/16</p>
                             </div>
@@ -61,12 +82,12 @@
                     <div class="wrap b-box clearfix">
                         <span class="num"><em><strong>DESIGN GOALS</strong></em><b>02</b></span>
                         <img src="../images/work/chamcham/computer.png" alt="">
-                        <div class="g-tl-6 left">
+                        <div class="g-tv-6 left">
                             <p class="title">Web Site</p>
                             <h3>HOTEL<br/>CHAM CHAM</h3>
                             <p>趣淘漫旅  /  2016  /  網站規劃設計</p>
                         </div>
-                        <div class="g-tl-6 right">
+                        <div class="g-tv-6 right">
                             <span>Description</span>
                             <p>台灣首間冒險體驗主題飯店，挑戰來到趣淘漫旅旅客們的體能極限！目標鎖定熱愛冒險、體驗刺激活動的年輕族群，架設飯店正是官網以利廣告行銷宣傳、訊息傳遞、公告佈達與訂房功能。</p>
                             <a href="http://www.chamcham.com.tw/" target="_blank">http://www.chamcham.com.tw/</a>
@@ -86,6 +107,10 @@
                                 <li>
                                     <div class="color gary"></div>
                                     <p>#24f6d6</p>
+                                </li>
+                                 <li class="opacity">
+                                    <div class="color"></div>
+                                    <p></p>
                                 </li>
                                 <li>
                                     <div class="color red"></div>
