--- a/work/index.html
+++ b/work/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-       
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>work - Lin Kuanyin's portfolio</title>
@@ -10,6 +9,27 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto:400,500,700" rel="stylesheet">
     </head>
     <body>
+        <div class="m_menu">
+            <div class="controlBox clearfix"><!--controlBox-->    
+                <div class="m_logo"><a href="../index.html"><img src="../images/logo.png"></a></div>
+                <a class="main"><i class="fa fa-reorder"></i></a>
+            </div><!--controlBox end-->
+            <div class="hideBox"><!--hideBox-->        
+                <ul class="nav">
+                    <li><a href="../index.html"><em>HOME</em>首頁</a></li>
+                    <li><a href="../about/index.html"><em>ABOUT</em>關於我</a></li>
+                    <li><a href="../work/index.html"><em>WORK</em>設計作品</a></li>    
+                </ul>    
+                <div class="downBox">
+                    <span>
+                        <p>Lin Kuanyin's portfolio.</p>
+                        <p>I’m a Visual Designer.</p>
+                    </span>
+                    <a ><i class="phone fa fa-mobile" aria-hidden="true"></i>+886-912-587-766</a>
+                    <a href="mailto:becky810210@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>becky810210@gmail.com</a>
+                </div>
+            </div><!--hideBox end-->
+        </div>
         <div class="outerwrap clearfix"><!--outerwrap-->
             <header class="b-box">
                 <h1><a href="../index.html"></a></h1>
@@ -30,7 +50,7 @@
             </header>
             <article>
                 <ul class="work">
-                    <li class="g-tl-4">
+                    <li class="g-4 g-ml-6">
                         <a href="caesar.html">
                             <div class="Img">
                                 <img src="../images/work/01.png" alt="">
@@ -41,7 +61,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="g-tl-4">
+                    <li class="g-4 g-ml-6">
                         <a href="chamcham.html">
                             <div class="Img">
                                 <img src="../images/work/02.png" alt="">
@@ -52,7 +72,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="g-tl-4">
+                    <li class="g-4 g-ml-6">
                         <a href="teashop.html">
                             <div class="Img">
                                 <img src="../images/work/03.png" alt="">
@@ -63,7 +83,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="g-tl-4">
+                    <li class="g-4 g-ml-6">
                         <a href="tptea.html">
                             <div class="Img">
                                 <img src="../images/work/04.png" alt="">
@@ -74,7 +94,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="g-tl-4">
+                    <li class="g-4 g-ml-6">
                         <a href="tsai.html">
                             <div class="Img">
                                 <img src="../images/work/05.png" alt="">
@@ -85,7 +105,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="g-tl-4">
+                    <li class="g-4 g-ml-6">
                         <a href="chateau.html">
                             <div class="Img">
                                 <img src="../images/work/06.png" alt="">
@@ -99,5 +119,7 @@
                 </ul>
             </article>
         </div><!--outerwrap end-->
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="../javascripts/jsmanage.js"></script>
     </body>
 </html>
