--- a/work/teashop.html
+++ b/work/teashop.html
@@ -10,6 +10,27 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:800,700,400,600|Roboto:400,500,700|Crimson+Text" rel="stylesheet">
     </head>
     <body>
+        <div class="m_menu">
+            <div class="controlBox clearfix"><!--controlBox-->    
+                <div class="m_logo"><a href="../index.html"><img src="../images/logo.png"></a></div>
+                <a class="main"><i class="fa fa-reorder"></i></a>
+            </div><!--controlBox end-->
+            <div class="hideBox"><!--hideBox-->        
+                <ul class="nav">
+                    <li><a href="../index.html"><em>HOME</em>首頁</a></li>
+                    <li><a href="../about/index.html"><em>ABOUT</em>關於我</a></li>
+                    <li><a href="../work/index.html"><em>WORK</em>設計作品</a></li>    
+                </ul>    
+                <div class="downBox">
+                    <span>
+                        <p>Lin Kuanyin's portfolio.</p>
+                        <p>I’m a Visual Designer.</p>
+                    </span>
+                    <a ><i class="phone fa fa-mobile" aria-hidden="true"></i>+886-912-587-766</a>
+                    <a href="mailto:becky810210@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>becky810210@gmail.com</a>
+                </div>
+            </div><!--hideBox end-->
+        </div>
         <div class="outerwrap clearfix"><!--outerwrap-->
             <header class="b-box">
                 <h1><a href="../index.html"></a></h1>
@@ -34,13 +55,13 @@
                         <p class="title">Web Design</p>
                         <h2><strong>TEA SHOP<br/><em>SINCE 1998</em></strong></h2>
                         <div class="infoBox clearfix">
-                            <div class="g-tl-6 left">
+                            <div class="g-tv-6 left">
                                 <span>Info</span>
                                 <p>喝茶只是一開始，喫茶小鋪用幸福的一口茶，讓我們更認識彼此。
 <br/>聞到了茶香中單純的清甜，看到了茶葉在不同溫度下綻放的舞姿。
 <br/>簡單的一口茶，帶來的溫度，讓我感受到幸福。</p>
                             </div>
-                            <div class="g-tl-6 right">
+                            <div class="g-tv-6 right">
                                 <div class="icon"></div>
                                 <span>Date</span>
                                 <p>05/16</p>
@@ -64,12 +85,12 @@
                     <div class="wrap b-box clearfix">
                         <span class="num"><em><strong>DESIGN GOALS</strong></em><b>02</b></span>
                         <img src="../images/work/teashop/computer.png" alt="">
-                        <div class="g-tl-6 left">
+                        <div class="g-tv-6 left">
                             <p class="title">Web Site</p>
                             <h3>TEA SHOP<br/><em>SINCE 1998</em></h3>
                             <p>喫茶小舖  /  2016  /  網站規劃設計</p>
                         </div>
-                        <div class="g-tl-6 right">
+                        <div class="g-tv-6 right">
                             <span>Description</span>
                             <p>注重網站獨特性，堅持將單純的茶做到最好，因為愛茶，想把喝好茶的幸福感帶給大家。在喫茶小舖，拉近與消費者之間的距離，透過網站可以進行廣告行銷宣傳、訊息傳遞、公告佈達與問卷活動的填寫。</p>
                             <a href="http://www.teashop168.com.tw/" target="_blank">http://www.teashop168.com.tw/</a>
@@ -89,6 +110,10 @@
                                 <li>
                                     <div class="color gary"></div>
                                     <p>#191919</p>
+                                </li>
+                                <li class="opacity">
+                                    <div class="color"></div>
+                                    <p></p>
                                 </li>
                                 <li>
                                     <div class="color red"></div>
