--- a/work/tptea.html
+++ b/work/tptea.html
@@ -10,6 +10,27 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:800,700,400,600|Roboto:400,500,700|Crimson+Text" rel="stylesheet">
     </head>
     <body>
+        <div class="m_menu">
+            <div class="controlBox clearfix"><!--controlBox-->    
+                <div class="m_logo"><a href="../index.html"><img src="../images/logo.png"></a></div>
+                <a class="main"><i class="fa fa-reorder"></i></a>
+            </div><!--controlBox end-->
+            <div class="hideBox"><!--hideBox-->        
+                <ul class="nav">
+                    <li><a href="../index.html"><em>HOME</em>首頁</a></li>
+                    <li><a href="../about/index.html"><em>ABOUT</em>關於我</a></li>
+                    <li><a href="../work/index.html"><em>WORK</em>設計作品</a></li>    
+                </ul>    
+                <div class="downBox">
+                    <span>
+                        <p>Lin Kuanyin's portfolio.</p>
+                        <p>I’m a Visual Designer.</p>
+                    </span>
+                    <a ><i class="phone fa fa-mobile" aria-hidden="true"></i>+886-912-587-766</a>
+                    <a href="mailto:becky810210@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>becky810210@gmail.com</a>
+                </div>
+            </div><!--hideBox end-->
+        </div>
         <div class="outerwrap clearfix"><!--outerwrap-->
             <header class="b-box">
                 <h1><a href="../index.html"></a></h1>
@@ -34,13 +55,13 @@
                         <p class="title">Web Design</p>
                         <h2><strong>TEA PATEA<br/><em>SINCE 2005</em></strong></h2>
                         <div class="infoBox clearfix">
-                            <div class="g-tl-6 left">
+                            <div class="g-tv-6 left">
                                 <span>Info</span>
                                 <p>創立於乙酉年，三十年茶湯硬底子，品選茶葉真功夫。<br/>
 堅持以茶會友的初衷，為您真心做到最好。<br/>
 提供最用心的幸福好茶，感受每一杯的人情滋味。</p>
                             </div>
-                            <div class="g-tl-6 right">
+                            <div class="g-tv-6 right">
                                 <span>Date</span>
                                 <p>05/17</p>
                             </div>
@@ -63,12 +84,12 @@
                     <div class="wrap b-box clearfix">
                         <span class="num"><em><strong>DESIGN GOALS</strong></em><b>02</b></span>
                         <img src="../images/work/tptea/computer.png" alt="">
-                        <div class="g-tl-6 left">
+                        <div class="g-tv-6 left">
                             <p class="title">Web Site</p>
                             <h3>TEA PATEA<br/><em>SINCE 2005</em></h3>
                             <p>茶湯會  /  2017  /  網站規劃設計</p>
                         </div>
-                        <div class="g-tl-6 right">
+                        <div class="g-tv-6 right">
                             <span>Description</span>
                             <p>在競爭激烈、千變萬化的外帶茶飲市場中，茶湯會希望透過獨立品牌網站建立品牌形象，並跳脫傳統電子商務的限制，加入響應式網站技術，掌握多螢裝置的顧客，以及增加會員功能加強與消費者之間的互動。</p>
                             <a href="http://tw.tp-tea.com/" target="_blank">http://tw.tp-tea.com/</a>
@@ -88,6 +109,10 @@
                                 <li>
                                     <div class="color gary"></div>
                                     <p>#c09552</p>
+                                </li>
+                                <li class="opacity">
+                                    <div class="color"></div>
+                                    <p></p>
                                 </li>
                                 <li>
                                     <div class="color red"></div>
