--- a/work/tsai.html
+++ b/work/tsai.html
@@ -10,6 +10,27 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:800,700,400,600|Roboto:400,500,700" rel="stylesheet">
     </head>
     <body>
+        <div class="m_menu">
+            <div class="controlBox clearfix"><!--controlBox-->    
+                <div class="m_logo"><a href="../index.html"><img src="../images/logo.png"></a></div>
+                <a class="main"><i class="fa fa-reorder"></i></a>
+            </div><!--controlBox end-->
+            <div class="hideBox"><!--hideBox-->        
+                <ul class="nav">
+                    <li><a href="../index.html"><em>HOME</em>首頁</a></li>
+                    <li><a href="../about/index.html"><em>ABOUT</em>關於我</a></li>
+                    <li><a href="../work/index.html"><em>WORK</em>設計作品</a></li>    
+                </ul>    
+                <div class="downBox">
+                    <span>
+                        <p>Lin Kuanyin's portfolio.</p>
+                        <p>I’m a Visual Designer.</p>
+                    </span>
+                    <a ><i class="phone fa fa-mobile" aria-hidden="true"></i>+886-912-587-766</a>
+                    <a href="mailto:becky810210@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>becky810210@gmail.com</a>
+                </div>
+            </div><!--hideBox end-->
+        </div>
         <div class="outerwrap clearfix"><!--outerwrap-->
             <header class="b-box">
                 <h1><a href="../index.html"></a></h1>
@@ -35,11 +56,11 @@
                         <h2><strong>TSAI GI FOOD<em>Concentrated Essence
 <br/>of Chicken</em></strong></h2>
                         <div class="infoBox clearfix">
-                            <div class="g-tl-6 left">
+                            <div class="g-tv-6 left">
                                 <span>Info</span>
                                 <p>蔡記秉持著『堅持用心、不斷創新、貼心服務、量身訂做』的服務理念，服務每一位客戶，讓每個家庭分享滿月的喜悅。朝向專業化、標準化與企業化的方式經營，持續引進高科技設備，讓客戶可以吃的更安心與健康。</p>
                             </div>
-                            <div class="g-tl-6 right">
+                            <div class="g-tv-6 right">
                                 <span>Date</span>
                                 <p>03/16</p>
                             </div>
@@ -49,12 +70,12 @@
                 <section class="design">
                     <div class="wrap b-box clearfix">
                         <img src="../images/work/tsai/computer.png" alt="">
-                        <div class="g-tl-6 left">
+                        <div class="g-tv-6 left">
                             <p class="title">Web Site</p>
                             <h3>TSAI GI FOOD<em>Concentrated Essence <br/>of Chicken</em></h3>
                             <p>蔡記食品  /  2016  /  網站規劃設計</p>
                         </div>
-                        <div class="g-tl-6 right">
+                        <div class="g-tv-6 right">
                             <span>Description</span>
                             <p>蔡記食品的購物網站以主打產品「彌月油飯」、「滴雞精」兩項，希望傳達其品牌的精神，為傳遞這份文化的味覺記憶；真誠用心的服務，與您一童照顧守護家人們的健康 -【傳承暖意 ‧ 守護幸福】</p>
                         </div>
@@ -72,6 +93,10 @@
                                 <li>
                                     <div class="color gary"></div>
                                     <p>#000000</p>
+                                </li>
+                                <li class="opacity">
+                                    <div class="color"></div>
+                                    <p></p>
                                 </li>
                                 <li>
                                     <div class="color red"></div>
@@ -99,15 +124,21 @@
                     </div>
                 </section>
                 <section class="rwd clearfix">
-                    <div class="g-tl-6 Img">
-                        <img class="phone" src="../images/work/tsai/phone.jpg" alt="">
+                    <div class="item clearfix">
+                        <div class="g-tv-6 ImgBox">
+                            <div class="Img">
+                                <img class="phone" src="../images/work/tsai/phone.jpg" alt="">
+                            </div>
+                        </div>
+                        
+                        <div class="g-tv-6 left ">
+                            <h3><strong>Responsive</strong><em>Web Design</em></h3>
+                            <p>原先以有在其他購物平台有銷售據點與穩定的消費客源，這次架設的全新購物網站則是希望透過獨立品牌網站建立品牌形象，並跳脫傳統電子商務的限制，加入響應式網站技術，掌握多螢裝置的顧客。<br/><br/>
+    以卡片式區塊排版，讓網站資訊內容跳脫舊有型式，而更活潑。
+    搭配情境式自然攝影技術，讓蔡記的商品更貼近生活，親近人心。 </p>
+                        </div>
                     </div>
-                    <div class="g-tl-6 left ">
-                        <h3><strong>Responsive</strong><em>Web Design</em></h3>
-                        <p>原先以有在其他購物平台有銷售據點與穩定的消費客源，這次架設的全新購物網站則是希望透過獨立品牌網站建立品牌形象，並跳脫傳統電子商務的限制，加入響應式網站技術，掌握多螢裝置的顧客。<br/><br/>
-以卡片式區塊排版，讓網站資訊內容跳脫舊有型式，而更活潑。
-搭配情境式自然攝影技術，讓蔡記的商品更貼近生活，親近人心。 </p>
-                    </div>
+                    
                 </section>
                 <section class="website">
                     <div class="wrap b-box clearfix">
