--- a/work/chateau.html
+++ b/work/chateau.html
@@ -10,6 +10,27 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:800,700,400,600|Roboto:400,500,700" rel="stylesheet">
     </head>
     <body>
+        <div class="m_menu">
+            <div class="controlBox clearfix"><!--controlBox-->    
+                <div class="m_logo"><a href="../index.html"><img src="../images/logo.png"></a></div>
+                <a class="main"><i class="fa fa-reorder"></i></a>
+            </div><!--controlBox end-->
+            <div class="hideBox"><!--hideBox-->        
+                <ul class="nav">
+                    <li><a href="../index.html"><em>HOME</em>首頁</a></li>
+                    <li><a href="../about/index.html"><em>ABOUT</em>關於我</a></li>
+                    <li><a href="../work/index.html"><em>WORK</em>設計作品</a></li>    
+                </ul>    
+                <div class="downBox">
+                    <span>
+                        <p>Lin Kuanyin's portfolio.</p>
+                        <p>I’m a Visual Designer.</p>
+                    </span>
+                    <a ><i class="phone fa fa-mobile" aria-hidden="true"></i>+886-912-587-766</a>
+                    <a href="mailto:becky810210@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>becky810210@gmail.com</a>
+                </div>
+            </div><!--hideBox end-->
+        </div>
         <div class="outerwrap clearfix"><!--outerwrap-->
             <header class="b-box">
                 <h1><a href="../index.html"></a></h1>
@@ -35,11 +56,11 @@
                         <h2><strong>Château
 <br/>Hotels & Resorts</strong></h2>
                         <div class="infoBox clearfix">
-                            <div class="g-tl-6 left">
+                            <div class="g-tv-6 left">
                                 <span>Info</span>
                                 <p>讓多樣、趣味、生動、健康的休閒活動與獨特美麗的自然環境結合，充分享受身心靈的放鬆，滿足一般顧客無法體驗到的海上活動，留下深刻的旅遊回憶。夏都以成為全國休閒渡假飯店的標竿，並創造經營績效。</p>
                             </div>
-                            <div class="g-tl-6 right">
+                            <div class="g-tv-6 right">
                                 <span>Date</span>
                                 <p>02/17</p>
                             </div>
@@ -49,13 +70,13 @@
                 <section class="design">
                     <div class="wrap b-box clearfix">
                         <img src="../images/work/chateau/computer.png" alt="">
-                        <div class="g-tl-6 left">
+                        <div class="g-tv-6 left">
                             <p class="title">Web Site</p>
                             <h3>Château
 <br/>Hotels & Resorts</h3>
                             <p>夏都集團  /  2017  /  網站規劃設計</p>
                         </div>
-                        <div class="g-tl-6 right">
+                        <div class="g-tv-6 right">
                             <span>Description</span>
                             <p>夏都集團未來將陸續推出南台灣住宿的新選擇，除墾丁夏都沙灘酒店外，又增加台南夏都城旅、台南夏都青旅、恆春夏都溫泉酒店，進行廣告行銷宣傳、投資人專區、優惠套裝專案...等訊息傳遞的集合式官網。 -【傳承暖意 ‧ 守護幸福】</p>
                         </div>
@@ -73,6 +94,10 @@
                                 <li>
                                     <div class="color gary"></div>
                                     <p>#b6a26f</p>
+                                </li>
+                                <li class="opacity">
+                                    <div class="color"></div>
+                                    <p></p>
                                 </li>
                                 <li>
                                     <div class="color red"></div>
@@ -100,12 +125,16 @@
                     </div>
                 </section>
                 <section class="rwd clearfix">
-                    <div class="g-tl-6 Img">
-                        <img class="phone" src="../images/work/chateau/phone.jpg" alt="">
+                    <div class="item clearfix">
+                    <div class="g-tv-6 ImgBox">
+                        <div class="Img">
+                            <img class="phone" src="../images/work/chateau/phone.jpg" alt="">
+                        </div>
                     </div>
-                    <div class="g-tl-6 left ">
+                    <div class="g-tv-6 left ">
                         <h3><strong>Responsive</strong><em>Web Design</em></h3>
                         <p>飯店的第一印象從網站開始，有別於其他產業，多數客戶是從網站上瞭解房間設備、空間設計風格及價格，夏都集團綜合墾丁夏都沙灘酒店、台南夏都城旅、台南夏都青旅、恆春夏都溫泉酒店於一的集合式網頁，因此使用響應式網站技術，即可掌握各種行動裝置的客戶，並搭配設計便利的視覺規劃，使瀏覽者更為方便操作。 </p>
+                    </div>
                     </div>
                 </section>
                 <section class="website">
